@@ -1,7 +1,5 @@
-class TwillAssertionError(AssertionError):
+class TwillAssertionError(Exception):
     """
     AssertionError to raise upon failure of some twill command.
-    Subclassed so that such errors can be caught separately from
-    normal AssertionErrors (from e.g. mechanize).
     """
     pass
